--- a/index.html
+++ b/index.html
@@ -13,24 +13,37 @@
 </head>
 
 <body>
-    <h1>
-        雅尼·赫里索马利斯
-    </h1>
+    <nav>
+        <ol>
+            <li>
+                <a href="#Yanni">个人简介</a>
+            </li>
+            <li>
+                <a href="#events">重要事件</a>
+            </li>
+            <li>
+                <a href="#works">主要作品</a>
+            </li>
+            <li>
+                <a href="#pictures">生活照</a>
+            </li>
+            <li>
+                <a href="#life">生平</a>
+            </li>
+        </ol>
+    </nav>
+    <h1 id="Yanni">雅尼·赫里索马利斯</h1>
     <p>
         艺名：Yanni 
         英语：Yiannis Chrysomallis， 生于1954年11月14日的希腊卡拉马塔，成年后在美国生活，全球闻名的作曲家和演奏家，两度被格莱美奖提名。
     </p>
-    <h2>
-        重要事件
-    </h2>
+    <h2 id="events">重要事件</h2>
     <ul>
         <li>1993年，雅尼在希腊雅典卫城举办了举世瞩目的音乐会—雅尼雅典卫城现场音乐会，从此一举成名。</li>
         <li>其中《Santorini》、《Until the Last Moment》、《Keys to Imagination》、《Reflections of Passion》等曲目成为世界名曲。</li>
         <li>1998年，雅尼和琳达分手，并且在同年完成他的环球巡演之后，他暂停了他的音乐事业。</li>
     </ul>
-    <h2>
-        主要作品
-    </h2>
+    <h2 id="works">主要作品</h2>
     <table>
         <thead>
             <tr><th>年份</th><th>专辑名</th></tr>
@@ -54,17 +67,18 @@
             <tr><td>2016</td>	<td>Sensuous Chill	冰火恋歌</td></tr>
     </tbody>
     </table>
-    <h2>
-        生活照
-    </h2>
-  
-        <div><img width="400" src="images/1.jpg" alt="图一"></div>
-        <div><img width="400" src="images/2.jpeg" alt="图二"></div>
-   
-
-    <h2>
-        生平
-    </h2>
+    <h2 id="pictures">生活照</h2>
+        <div>
+            <a href="images/1.jpg" target="_blank">
+                <img width="400" src="images/1.jpg" alt="图一">
+            </a>
+        </div>
+        <div>
+            <a href="images/2.jpeg" target="_blank">
+                <img width="400" src="images/2.jpeg" alt="图二">
+            </a>
+        </div>
+    <h2 id="life">生平</h2>
     <p>
     雅尼出生在一个很普通的希腊家庭，六岁的时候他开始弹钢琴，他的父母鼓励他按照自己的方式学习音乐，而非接受正规的音乐培训。童年的雅尼总是试图为电影配曲，他并不在意电影的故事情节，而是用脑子记下电影的配曲，回家后再用钢琴把它们弹出来，并逐步丰富旋律，他会给这些曲子取名为新音乐，因为他总是不断的给每个曲子加进更好的效果做出更好的改善。
     </p>
